--- a/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Views/config.definition.html
+++ b/src/Terratype.LeafletV1/App_Plugins/Terratype.LeafletV1/Views/config.definition.html
@@ -1,55 +1,132 @@
 ﻿<div ng-disabled="vm().provider.status.loading" ng-show="store().position.id">
+    <style>
+        .terratype .icon-delete:hover, .terratype .icon-add:hover {
+            color: #b94a48;
+        }
+    </style>
 
-    <div ng-repeat="l in vm().provider.mapSources track by $index">
-        <div 
-
-
-
-        <div class="umb-el-wrap control-group">
-            <label for="terratype_{{identifier}}_leafletv1_mapSource_{{l}}" class="control-label">
-                <localize key="terratypeLeafletV1ConfigDefinition_mapSourceLabel">Map Source:</localize>
-                <small>
-                    <localize key="terratypeLeafletV1ConfigDefinition_mapSourceDescription">Organisations or companies that delivers map based data compatible with Leaflet V1</localize>
-                </small>
+    <div class="umb-el-wrap control-group">
+        <div ng-show="!store().provider || !store().provider.mapSources || store().provider.mapSources.length == 0" style="">
+            <label ng-click="vm().provider.events.mapSourceAddRow();vm().provider.events.mapSourceToggleRow(0, true)" style="cursor:pointer;">
+                <i class="icon icon-add">
+                </i>
+                <localize key="terratypeLeafletV1ConfigDefinition_mapSourceAdd">Add a Map Source</localize>
             </label>
-            <div class="controls">
-                <select id="terratype_{{identifier}}_leafletv1_mapSource_{{l}}" ng-model="l.id" class="umb-editor" ng-options="p.id as p.name for p in vm().provider.mapSource | orderBy: 'p.name' | filter:vm().provider.events.filter(store().position.id, p.id)" ng-change="vm().provider.events.setMapSource(vm().provider.mapSource.id)">
-                </select>
-                <div ng-show="vm().provider.mapSource.id">
-                    <small>
-                        {{vm().provider.mapSource.description}}
-                    </small>
-                </div>
-            </div>
         </div>
-        <div class="umb-el-wrap control-group" ng-show="vm().provider.mapSource.id">
-            <label for="terratype_{{identifier}}_leafletv1_tileServer" class="control-label">
-                <localize key="terratypeLeafletV1ConfigDefinition_tileServerLabel">Tile Server:</localize>
-                <small>
-                    <localize key="terratypeLeafletV1ConfigDefinition_tileServerDescription">Organisations or companies that delivers map based data compatible with Leaflet V1</localize>
-                </small>
-            </label>
-            <div class="controls">
-                <select id="terratype_{{identifier}}_leafletv1_mapSource" ng-model="vm().provider.mapSource.tileServer.id" class="umb-editor" ng-options="p.id as p.name for p in vm().provider.mapSource.tileServers | orderBy: 'p.name' | filter:vm().provider.events.filter(store().position.id, p.id)" ng-change="vm().provider.events.setTileServer(vm().provider.mapSource.tileServer.id)"></select>
+        <div ng-repeat="l in store().provider.mapSources track by $index" style="border-bottom:1px dashed #dddddd;margin-bottom:5px;">
+            <div>
+                <div ng-click="vm().provider.events.mapSourceToggleRow($index)" style="min-width:180px;height:30px;float:left;cursor:pointer">
+                    <div class="caret">
+                    </div>
+                    <span ng-style="{'color' : (l.mapSource.id && l.tileServer.id && l.minZoom && l.maxZoom && vm().provider.events.tileServerByCoordinateSystemAndId[store().position.id + '.' + l.tileServer.id] == true && l.minZoom >= vm().provider.events.tileServerById[l.tileServer.id].minZoom && l.minZoom <= l.maxZoom && l.maxZoom <= vm().provider.events.tileServerById[l.tileServer.id].maxZoom) ? 'auto' : 'red'}">
+                        {{l.minZoom}}-{{l.maxZoom}} {{vm().provider.events.mapSourceById[l.mapSource.id].name}} {{vm().provider.events.tileServerById[l.tileServer.id].name}}
+                    </span>
+                </div>
+                <div style="float:right;cursor:pointer;color:#ddd;">
+                    <i class="icon icon-delete" ng-click="vm().provider.events.mapSourceDeleteRow($index)" localize="title" title="@terratypeLeafletV1ConfigDefinition_mapSourceDeleteTitle"></i>
+                </div>
+                <div style="clear:both"></div>
             </div>
-         </div>
-        <div class="umb-el-wrap control-group" ng-show="vm().provider.mapSource.key.enable == true">
-            <label for="terratype_{{identifier}}_leafletv1_key" class="control-label">
-                <localize key="{{vm().provider.mapSource.key.name}}"></localize>
-                <small>
-                    <localize key="{{vm().provider.mapSource.key.description}}"></localize>
-                </small>
-            </label>
-            <div class="controls">
-                <input id="terratype_{{identifier}}_leafletv1_key" type="text" ng-model="config().provider.key.value" class="umb-editor umb-textstring textstring" localize="placeholder" placeholder="@{{vm().provider.mapSource.key.placeholder}}" spellcheck=false />
-                <div>
-                    <div terratype-translate="{{vm().provider.mapSource.key.url}}">
+            <div id="terratype_{{identifier}}_leafletv1_mapSources_{{$index}}" style="margin-left:10px;">
+                <div class="umb-el-wrap control-group">
+                    <label for="terratype_{{identifier}}_leafletv1_mapSource_{{$index}}" class="control-label">
+                        <localize key="terratypeLeafletV1ConfigDefinition_mapSourceLabel">Map Source:</localize>
+                        <small>
+                            <localize key="terratypeLeafletV1ConfigDefinition_mapSourceDescription">Organisations or companies that delivers map based data compatible with Leaflet V1</localize>
+                        </small>
+                    </label>
+                    <div class="controls">
+                        <select id="terratype_{{identifier}}_leafletv1_mapSource_{{$index}}" ng-model="store().provider.mapSources[$index].mapSource.id" class="umb-editor" ng-options="p.id as p.name for p in vm().provider.events.mapSourceByCoordinateSystem[store().position.id] | orderBy: 'p.name'"></select>
+                        <div ng-show="l.mapSource.id">
+                            <small ng-bind-html="vm().provider.events.mapSourceById[l.mapSource.id].description">
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="umb-el-wrap control-group" ng-show="l.mapSource.id">
+                    <label for="terratype_{{identifier}}_leafletv1_tileServer_{{$index}}" class="control-label">
+                        <localize key="terratypeLeafletV1ConfigDefinition_tileServerLabel">Tile Server:</localize>
+                        <small>
+                            <localize key="terratypeLeafletV1ConfigDefinition_tileServerDescription">Server</localize>
+                        </small>
+                    </label>
+                    <div class="controls">
+                        <select id="terratype_{{identifier}}_leafletv1_tileServer_{{$index}}" ng-model="store().provider.mapSources[$index].tileServer.id" class="umb-editor" ng-options="p.id as p.name for p in vm().provider.events.tileServerByCoordinateSystemAndMapSource[store().position.id][l.mapSource.id] | orderBy: 'p.name'"></select>
+                        <div ng-show="l.tileServer.id && !vm().provider.events.tileServerByCoordinateSystemAndId[store().position.id + '.' + l.tileServer.id]">
+                            <small style="color:red;">
+                                <localize key="terratypeLeafletV1ConfigDefinition_tileServerInvalidCoordinateSystem"></localize>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="umb-el-wrap control-group" ng-show="l.mapSource.id && vm().provider.events.mapSourceById[l.mapSource.id].key.enable == true">
+                    <label for="terratype_{{identifier}}_leafletv1_key_{{$index}}" class="control-label">
+                        <span ng-bind-html="vm().provider.events.mapSourceById[l.mapSource.id].key.name"></span>
+                        <small ng-bind-html="vm().provider.events.mapSourceById[l.mapSource.id].key.description">
+                        </small>
+                    </label>
+                    <div class="controls">
+                        <input id="terratype_{{identifier}}_leafletv1_key_{{$index}}" type="text" ng-model="store().provider.mapSources[$index].key.value" class="umb-editor umb-textstring textstring" placeholder="{{vm().provider.events.mapSourceById[l.mapSource.id].key.placeholder}}" spellcheck="false" />
+                        <div>
+                            <div terratype-translate="{{l.key.url}}">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="umb-el-wrap control-group">
+                    <label for="terratype_{{identifier}}_leafletv1_minZoom_{{l}}" class="control-label">
+                        <localize key="terratypeLeafletV1ConfigDefinition_minZoomLabel">Min Zoom:</localize>
+                        <small>
+                            <localize key="terratypeLeafletV1ConfigDefinition_minZoomDescription">Minimum zoom</localize>
+                        </small>
+                    </label>
+                    <div class="controls">
+                        <input type="number" id="terratype_{{identifier}}_leafletv1_minZoom_{{l}}" ng-model="store().provider.mapSources[$index].minZoom" class="umb-editor" min="{{vm().provider.events.tileServerById[l.tileServer.id].minZoom}}" max="{{vm().provider.events.tileServerById[l.tileServer.id].maxZoom}}" />
+                        <div ng-show="l.minZoom && (l.minZoom < vm().provider.events.tileServerById[l.tileServer.id].minZoom || l.minZoom > vm().provider.events.tileServerById[l.tileServer.id].maxZoom)">
+                            <small style="color:red;">
+                                <span terratype-translate="terratypeLeafletV1ConfigDefinition_minZoomError"></span>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <div class="umb-el-wrap control-group">
+                    <label for="terratype_{{identifier}}_leafletv1_maxZoom_{{l}}" class="control-label">
+                        <localize key="terratypeLeafletV1ConfigDefinition_maxZoomLabel">Max Zoom:</localize>
+                        <small>
+                            <localize key="terratypeLeafletV1ConfigDefinition_maxZoomDescription">Maximum zoom</localize>
+                        </small>
+                    </label>
+                    <div class="controls">
+                        <input type="number" id="terratype_{{identifier}}_leafletv1_maxZoom_{{l}}" ng-model="store().provider.mapSources[$index].maxZoom" class="umb-editor" min="{{vm().provider.events.tileServerById[l.tileServer.id].minZoom}}" max="{{vm().provider.events.tileServerById[l.tileServer.id].maxZoom}}" />
+                        <div ng-show="l.maxZoom && (l.maxZoom < vm().provider.events.tileServerById[l.tileServer.id].minZoom || l.maxZoom > vm().provider.events.tileServerById[l.tileServer.id].maxZoom)">
+                            <small style="color:red;">
+                                <span terratype-translate="terratypeLeafletV1ConfigDefinition_maxZoomError"></span>
+                            </small>
+                        </div>
+                        <div ng-show="l.maxZoom < l.minZoom">
+                            <small style="color:red;">
+                                <localize key="terratypeLeafletV1ConfigDefinition_maxZoomInvalid"></localize>
+                            </small>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+        <div ng-show="store().provider && store().provider.mapSources && store().provider.mapSources.length != 0" style="">
+            <div ng-click="vm().provider.events.mapSourceOrderRows();vm().provider.events.mapSourceAddRow();vm().provider.events.mapSourceToggleRow(store().provider.mapSources.length - 1, true)">
+                <i class="icon icon-add">
+                </i>
+                <label>
+                    <localize key="terratypeLeafletV1ConfigDefinition_mapSourceAddAnother">Add a Map Source</localize>
+                </label>
+            </div>
+        </div>
+
+        <div style="margin-top:10px;padding:10px;background-color:#efefef;border:1px solid #dddddd">
+            <small>
+                <localize key="terratypeLeafletV1ConfigDefinition_mapSourceMessage"></localize>
+            </small>
+        </div>
     </div>
-    <small>
-        <localize key="terratypeLeafletV1ConfigDefinition_mapSourceMessage"></localize>
-    </small>
+
 </div>
