--- a/src/Terratype.TestSite/Views/ArchetypeMap.cshtml
+++ b/src/Terratype.TestSite/Views/ArchetypeMap.cshtml
@@ -192,5 +192,30 @@
 
     <button onclick="var a = document.getElementById('pretend-accordion6');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
 
+
+    <h1>
+        @Model.Content.Name - Combined Bing maps
+    </h1>
+
+
+    <div id="pretend-accordion7" style="display:@(Request.QueryString["show7"] != null ? "display" : "none");">
+
+        @foreach (var record in Model.Content.Bing)
+            {
+                var name = record.GetValue<string>("name");
+                var map = record.GetValue<Terratype.Models.Model>("location");
+
+            @Html.Terratype(new Options { MapSetId = 11 }, map,
+        @<text>
+            @name is at @map.Position
+        </text>
+        )
+        }
+    </div>
+
+
+    <button onclick="var a = document.getElementById('pretend-accordion7');a.style.display = (a.style.display=='none') ? 'block':'none'">Show/Hide Map</button>
+
+
 </body>
 </html>
