--- a/src/Terratype.TestSite/Views/Single4.cshtml
+++ b/src/Terratype.TestSite/Views/Single4.cshtml
@@ -88,7 +88,8 @@
        },
        MapSetId = 11,
        Zoom = 3,
-       Position = new Terratype.CoordinateSystems.Wgs84("50,0")
+       Position = new Terratype.CoordinateSystems.Wgs84("50,0"),
+       Height = 700
    })
 
 
