--- a/src/Terratype.TestSite/App_Plugins/Terratype/Views/editor.html
+++ b/src/Terratype.TestSite/App_Plugins/Terratype/Views/editor.html
@@ -1,13 +1,13 @@
 ﻿<!-- Terratype -->
 <div class="ng-cloak terratype" ng-controller="terratype" ng-init="terratype.initEditor()" ng-show="!vm().loading">
     <div>
-        <div ng-show="vm().isPreview">
-            <div ng-style="{'background-image':'url(' + vm().provider.events.files.mapExample + ')','padding-top': '10px 0 10px 25px', 'margin':'-40px 0 0 -10px', 'height':'100px'}">
+        <div ng-if="vm().isPreview">
+            <div ng-style="{'background-image':'url(' + vm().provider.events.files.mapExample + ')','padding-top': '10px 0 10px 25px', 'margin':'-40px -10px 0 -10px', 'height':'100px'}">
                 <div style="text-align:center">
-                    <div ng-show="config().debug != 1">
+                    <div ng-if="config().debug != 1">
                         <img ng-src="{{terratype.absoluteUrl(config().icon.url)}}" ng-style="{'width': config().icon.size.width + 'px', 'height': config().icon.size.height + 'px', 'margin-top':'25px'}" />
                     </div>
-                    <div ng-show="config().debug == 1">
+                    <div ng-if="config().debug == 1">
                         <h2 style="padding-top:25px;">
                             <localize key="terratypeEditor_debugMode">DEBUG MODE</localize>
                         </h2>
@@ -15,8 +15,11 @@
                 </div>
             </div>
         </div>
-        <div ng-show="!vm().isPreview">
-            <div ng-show="config().debug != 1">
+        <div ng-if="!vm().isPreview">
+            <div ng-if="config().debug != 1">
+                <style ng-bind-html="'@media (max-width:767px) { #terratype_' + identifier + '_editor_apperance_start {clear:both;}}'">
+                </style>
+                <div id="terratype_{{identifier}}_editor_apperance_start" style="height:1px;">&nbsp;</div>
                 <ng-include src="vm().provider.events.files.views.editor.apperance">
                 </ng-include>
             </div>
@@ -31,7 +34,7 @@
                 <ng-include src="vm().label.view">
                 </ng-include>
             </div>
-            <div ng-show="config().debug != 0">
+            <div ng-if="config().debug != 0">
                 <div ng-show="vm().error" style="color:red;">
                     <localize key="terratypeEditor_error">Error loading Terratype control, the json below is corrupt</localize>
                 </div>
